# truss-smoke-tester

./: README.md  pyproject.toml
copier_truss_template/: copier.yaml
copier_truss_template/{{project_name}}/: config.yaml.jinja
copier_truss_template/{{project_name}}/model/: model.py.jinja
truss_smoke_tester/: main.py
